# backend-discorp

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .railwayignore  Dockerfile  Makefile  PLANIFICACION_PROYECTO.md  Procfile  RAILWAY_DEPLOY.md  deploy.sh  env.example  nixpacks.toml  pyproject.toml  railway.json  schema.yml  test_cloudinary.py
.cursor/rules/: apps-organization.mdc  django-5-2.mdc  drf-yasg-documentation.mdc  drf-yasg-implementation-guide.mdc  uv.mdc
.trunk/: trunk.yaml
apps/notifications/: admin.py  admin_views.py  apps.py  models.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/products/: models.py  urls.py  views.py
apps/projects/: admin.py  models.py  serializers.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  (+1 more)
core/: asgi.py  environment.py  settings.py  urls.py
docs/: admin-notifications-panel-complete.md  analytics-dashboard-complete.md  cambios.md  demo-delivery-system.md  estructura.md  fcm-django-usage-examples.md  flutter-auth-endpoints-simple.md  flutter-integration-apis.md  flutter-push-notifications-complete-guide.md  notification-endpoints-testing.md  orders-summary.md  orders-system.md  payments-system-complete.md  pendientes-desarrollo.md  redis-delivery-test-results.md  sprint1-stores-implementado.md  sprint2-delivery-websockets.md  stores-system-completed.md
scripts/: create_app.sh
templates/admin/: custom_index.html
(+4 files in other folders)
